# apps/aurelius-rest/controllers/job_controller.go
@@ -1,45 +1,32 @@
 package controllers
 
 import (
-	storage "aurelius/libs/aurelius-storage"
+	"aurelius/apps/aurelius-rest/service"
 	"github.com/gin-gonic/gin"
 	"net/http"
 )
 
 type JobController struct {
-	Get func(c *gin.Context)
-
+	Get  func(c *gin.Context)
 	Post func(c *gin.Context)
 }
 
-func NewJobController(repository storage.JobRepository) JobController {
+func NewJobController(jobService *service.JobService) JobController {
 	return JobController{
-		Get:  getScheduledJobs(repository),
+		Get:  listJobs(jobService),
 		Post: createScheduledJob(),
 	}
 }
 
-type scheduledJob struct {
-	ID   int    `json:"id"`
-	Name string `json:"name"`
-	Cron string `json:"cron"`
-}
-
-var scheduledJobs = []scheduledJob{
-	{ID: 1, Name: "hosp_daily_job", Cron: "0 0 0 * * *"},
-	{ID: 2, Name: "remove_stale_consultants", Cron: "0 1 0 * * *"},
-	{ID: 3, Name: "recalculate_invoices", Cron: "0 2 0 * * *"},
-}
-
-// GetScheduledJobs godoc
+// ListJobs godoc
 // @Summary Get all scheduled jobs
 // @Router /jobs [get]
 // @Produce json
 // @Tags jobs
-// @Success 200 {array} scheduledJob
-func getScheduledJobs(repository storage.JobRepository) func(c *gin.Context) {
+// @Success 200 {array} dto.JobDto
+func listJobs(service *service.JobService) func(c *gin.Context) {
 	return func(c *gin.Context) {
-		items, err := repository.GetAll()
+		items, err := service.GetAll()
 
 		if err != nil {
 			panic(err)
@@ -51,13 +38,14 @@ func getScheduledJobs(repository storage.JobRepository) func(c *gin.Context) {
 
 func createScheduledJob() func(c *gin.Context) {
 	return func(c *gin.Context) {
-		var job scheduledJob
-		if err := c.BindJSON(&job); err != nil {
-			c.IndentedJSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-			return
-		}
-
-		scheduledJobs = append(scheduledJobs, job)
-		c.IndentedJSON(http.StatusCreated, job)
+		panic("not implemented")
+		//var job scheduledJob
+		//if err := c.BindJSON(&job); err != nil {
+		//	c.IndentedJSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		//	return
+		//}
+		//
+		//scheduledJobs = append(scheduledJobs, job)
+		//c.IndentedJSON(http.StatusCreated, job)
 	}
 }
