# apps/aurelius-rest/docs/swagger.json
@@ -43,7 +43,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/controllers.scheduledJob"
+                                "$ref": "#/definitions/dto.JobDto"
                             }
                         }
                     }
@@ -52,20 +52,6 @@
         }
     },
     "definitions": {
-        "controllers.scheduledJob": {
-            "type": "object",
-            "properties": {
-                "cron": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "name": {
-                    "type": "string"
-                }
-            }
-        },
         "dto.AgentDto": {
             "type": "object",
             "properties": {
@@ -85,6 +71,29 @@
                     "type": "string"
                 },
                 "service": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.JobDto": {
+            "type": "object",
+            "properties": {
+                "agentId": {
+                    "type": "string"
+                },
+                "finishedAt": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "startedAt": {
+                    "type": "string"
+                },
+                "version": {
                     "type": "string"
                 }
             }
